<resources>
    <string name="app_name">MeetUp</string>
    <string name="background_image_description">Background image for meetup</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username_msg">Enter your username</string>
    <string name="enter_password_msg">Enter your password</string>

    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="events">Events now</string>
    <string name="new_meeting">New meeting</string>
    <string name="about_app">About app</string>
    <string name="event_details">Event details</string>

    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="enter_email">"Enter users email"</string>
    <string name="user_not_found">"User not found"</string>
    <string name="error_occurred">"Unknown error occurred"</string>
    <string name="already_friends">"You are already friends"</string>
    <string name="add_participants">"Add participants"</string>

    <string name="permission_location_rationale">In order to show meetings close to you, we require the location permission to be granted.</string>
    <string name="about_app_description">MeetUp makes it easier to organize meetings and events with other people. You can create events and invite your friends to them.
    </string>
</resources>