...
                sheetShape = RectangleShape,
                sheetElevation = BottomSheetScaffoldDefaults.SheetElevation,
                sheetBackgroundColor = MaterialTheme.colorScheme.surfaceVariant,
                sheetContentColor = MaterialTheme.colorScheme.onSurfaceVariant,
                floatingActionButton = {
                    FloatingActionButton(
                        modifier = Modifier.absoluteOffset(x = 0.dp, y = (-40).dp).testTag("Main home FAB"),
                        onClick = {
                            navController.navigate(
                                Screen.NewMeeting.route
                            )
                        },
                        shape = MaterialTheme.shapes.medium,
...
