...
private fun AddBody(email: MutableState<String>, errMsg: MutableState<String>) {
    Box(
        modifier = Modifier
            .padding(20.dp)
    ) {
        TextField(
            modifier = Modifier.testTag("Add friend TextField"),
            value = email.value,
            onValueChange = { email.value = it },
            label = { Text(text = stringResource(id = R.string.enter_email)) },
            supportingText = {
                Text(
                    text = errMsg.value,
...
